<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KeepThings</string>
    <string name="stringTitle">Title</string>
    <string name="stringDesc">Description</string>
    <string name="stringPerson">Person</string>
    <string name="stringDateFrom">From</string>
    <string name="stringDateTo">To</string>
    <string name="stringNewUserItemEntry">New Entry</string>
    <string name="stringSave">Save</string>
    <string name="dateFromErrorMessage">Please select a date before the end date.</string>
    <string name="dateToErrorMessage">Please select a date after the start date.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="my_item_list">My List</string>
    <string name="marketplace">Marketplace</string>
    <string name="about">About</string>
    <string name="wordpress_link" translatable="false">keepthingsnlb.wordpress.com</string>
    <string name="github_link" translatable="false">https://github.com/KeepThings/</string>
    <string name="blog">Blog</string>
    <string name="github">GitHub</string>
    <string name="settings">Settings</string>
    <string name="success">Successly delivered the data!</string>
    <string name="unsuccess">There was an error!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_to_short_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="com_auth0_client_id" translatable="false">darTWkOKmvvDIwIKw2Qaw6hTuakyHsFy</string>
    <string name="com_auth0_domain" translatable="false">keepthings.eu.auth0.com</string>

</resources>
